fix z-index

--- a/assets/stylesheets/less/main.less
+++ b/assets/stylesheets/less/main.less
@@ -192,6 +192,7 @@ article {
   position: relative;
   font-weight: 500;
   font-size: 16px;
+  z-index:0;
 
   &.col-lg-9 {
     min-height: 700px;
